# STREAMSTAT

./: .gitignore  CMakeLists.txt  README.md  StreamStatConfig.cmake
src/: CMakeLists.txt  Count.cpp  Count.h  Kurtosis.cpp  Kurtosis.h  Maximum.cpp  Maximum.h  Mean.cpp  Mean.h  Minimum.cpp  Minimum.h  Skewness.cpp  Skewness.h  StatisticsDefinitions.h  StreamingStatistic.h  StreamingStatisticFactory.cpp  StreamingStatisticFactory.h  Sum.cpp  Sum.h  Variance.cpp  Variance.h
utilities/: CMakeLists.txt  statistics_unit_test.cpp
